--- a/Amazon_Reviews.ipynb
+++ b/Amazon_Reviews.ipynb
@@ -207,6 +207,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Loading the datasets into DataFrames"
+      ],
+      "metadata": {
+        "id": "25-NL967FmFG"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Extracting data from the file paths\n",
@@ -266,10 +275,281 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Preliminaries"
+      ],
+      "metadata": {
+        "id": "T1P1LKrXFfWL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Check the info of the dataframes\n",
+        "train_df.info()"
+      ],
+      "metadata": {
+        "id": "aoexdNOHF-Zi",
+        "outputId": "d2d9d443-cdbc-4af8-abc7-f0008781774c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 3600000 entries, 0 to 3599999\n",
+            "Data columns (total 2 columns):\n",
+            " #   Column  Dtype \n",
+            "---  ------  ----- \n",
+            " 0   label   int64 \n",
+            " 1   text    object\n",
+            "dtypes: int64(1), object(1)\n",
+            "memory usage: 54.9+ MB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_df['label'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        },
+        "id": "--A6e7udBn04",
+        "outputId": "d0a6a34c-fe00-4136-d15c-6ca33b01cd9b"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label\n",
+              "2    1800000\n",
+              "1    1800000\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>1800000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>1800000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "test_df['label'].value_counts()"
+      ],
+      "metadata": {
+        "id": "34XvK9RgFKgJ",
+        "outputId": "6313c71e-f336-4c21-cb1f-743cc1db4fc2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 178
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "label\n",
+              "2    200000\n",
+              "1    200000\n",
+              "Name: count, dtype: int64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>label</th>\n",
+              "      <th></th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>200000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>200000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> int64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Checking for duplicates in the dataframes\n",
+        "train_df.duplicated().sum()"
+      ],
+      "metadata": {
+        "id": "ilbJygktFRRN",
+        "outputId": "00a6fed5-1208-4857-e730-39f04f348f5a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.int64(0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Named Entity Recognition (NER)"
+      ],
+      "metadata": {
+        "id": "bF-4NKKHG5Yw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "nlp = spacy.load(\"en_core_web_sm\")\n",
+        "\n",
+        "def extract_entities(text):\n",
+        "  doc = nlp(text)\n",
+        "  entities = {}\n",
+        "  for ent in doc.ents:\n",
+        "    if ent.label_ in [\"PRODUCT\", \"ORG\"]: # ORG often captures brand names\n",
+        "      if ent.label_ not in entities:\n",
+        "        entities[ent.label_] = []\n",
+        "      entities[ent.label_].append(ent.text)\n",
+        "  return entities\n",
+        "\n",
+        "# Apply NER to a sample of the training data\n",
+        "# Processing the entire dataset might be slow, so we'll process a smaller portion.\n",
+        "sample_size = 20000\n",
+        "train_df_sample = train_df.sample(n=sample_size, random_state=42).copy() # Use .copy() to avoid SettingWithCopyWarning\n",
+        "train_df_sample['entities'] = train_df_sample['text'].apply(extract_entities)\n",
+        "\n",
+        "print(\"\\nSample DataFrame with extracted entities:\")\n",
+        "print(train_df_sample.head())"
+      ],
+      "metadata": {
+        "id": "VFX5jNawFZXr",
+        "outputId": "81be4c9c-4790-4d61-8aef-f053dfdfb8ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Sample DataFrame with extracted entities:\n",
+            "         label                                               text  \\\n",
+            "2079998      1  Expensive Junk: This product consists of a pie...   \n",
+            "1443106      1  Toast too dark: Even on the lowest setting, th...   \n",
+            "3463669      2  Excellent imagery...dumbed down story: I enjoy...   \n",
+            "2914699      1  Are we pretending everyone is married?: The au...   \n",
+            "1603231      1  Not worth your time: Might as well just use a ...   \n",
+            "\n",
+            "                              entities  \n",
+            "2079998  {'ORG': ['Velcro', 'Amazon']}  \n",
+            "1443106         {'ORG': ['Cuisinart']}  \n",
+            "3463669                             {}  \n",
+            "2914699                             {}  \n",
+            "1603231                             {}  \n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "--A6e7udBn04"
+        "id": "OvX2GqD9HhfH"
       },
       "execution_count": null,
       "outputs": []
