--- a/Amazon_Reviews.ipynb
+++ b/Amazon_Reviews.ipynb
@@ -32,7 +32,6 @@
       "isGpuEnabled": true
     },
     "colab": {
-      "name": "Amazon Reviews",
       "provenance": [],
       "include_colab_link": true
     }
@@ -51,13 +50,28 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "### Downloading Amazon Review Data from Kaggle"
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "GkB8MezA8MY_"
-      }
+        "id": "Ceve_c7Mn1fx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0ddeb510-6b79-49f9-bbec-32a96db019b1"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     },
     {
       "source": [
@@ -72,11 +86,11 @@
         "print('Data source import complete.')\n"
       ],
       "metadata": {
+        "id": "zkUhTQm7nO39",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "q_oMbZzB5wc0",
-        "outputId": "8be064a1-836d-483f-e8f3-7906ac9fb442"
+        "outputId": "0441a373-e1a1-4dca-fac3-61f4bd8dbd2e"
       },
       "cell_type": "code",
       "outputs": [
@@ -91,7 +105,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 493M/493M [00:07<00:00, 69.2MB/s]"
+            "100%|██████████| 493M/493M [00:05<00:00, 98.3MB/s]"
           ]
         },
         {
@@ -116,7 +130,7 @@
           ]
         }
       ],
-      "execution_count": 1
+      "execution_count": 2
     },
     {
       "cell_type": "code",
@@ -129,10 +143,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "id": "oT8SBbEq7uDD",
-        "outputId": "0163f5e5-d8aa-4379-f546-25bbc503dab2"
+        "id": "ahuvYq4b3CnD",
+        "outputId": "5db3e00a-f132-47de-a622-59b5f6eabd6a"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -145,18 +159,33 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         }
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "### Importing necessary libraries"
+        "# Show files in the path\n",
+        "print(os.listdir(bittlingmayer_amazonreviews_path))"
       ],
       "metadata": {
-        "id": "LVk2pqkH8Fzi"
-      }
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "psGh2mnj3MB7",
+        "outputId": "bcd95e8d-9e06-4c06-bbd9-7b8ea590ffae"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['train.ft.txt.bz2', 'test.ft.txt.bz2']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -177,7 +206,31 @@
         "import bz2"
       ],
       "metadata": {
-        "id": "qwlqh-UU8E2B"
+        "id": "6uSZtTwDvmTv"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_path = '/content/drive/MyDrive/amazonreviews_data/train.ft.txt.bz2'\n",
+        "test_path = '/content/drive/MyDrive/amazonreviews_data/test.ft.txt.bz2'\n",
+        "\n",
+        "def load_data(file_path):\n",
+        "    texts = []\n",
+        "    labels = []\n",
+        "    with bz2.open(file_path, 'rt', encoding='utf-8') as f:\n",
+        "        for line in f:\n",
+        "            # if the format is __label__X followed by the review text\n",
+        "            label = int(line[9]) - 1  # Adjust label to be 0 or 1 (for __label__1 and __label__2)\n",
+        "            text = line[11:].strip()\n",
+        "            texts.append(text)\n",
+        "            labels.append(label)\n",
+        "    return pd.DataFrame({'text': texts, 'label': labels})"
+      ],
+      "metadata": {
+        "id": "FcxILzuYwU_8"
       },
       "execution_count": 9,
       "outputs": []
@@ -185,57 +238,8 @@
     {
       "cell_type": "code",
       "source": [
-        "# Show files in the path\n",
-        "print(os.listdir(bittlingmayer_amazonreviews_path))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cINxLP0K7z_T",
-        "outputId": "f2b08f7d-527d-4c12-85d8-e4aea1e8d17f"
-      },
-      "execution_count": 7,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "['test.ft.txt.bz2', 'train.ft.txt.bz2']\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Loading the datasets into DataFrames"
-      ],
-      "metadata": {
-        "id": "25-NL967FmFG"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Extracting data from the file paths\n",
-        "def extractData(filename):\n",
-        "    data = []\n",
-        "    with bz2.open(filename, 'rt', encoding='utf-8') as f:\n",
-        "        for line in f:\n",
-        "            parts = line.strip().split(' ', 1)\n",
-        "            if len(parts) == 2:\n",
-        "                label, text = parts\n",
-        "                data.append((label, text))\n",
-        "    df = pd.DataFrame(data, columns=['label', 'text'])\n",
-        "    df['label'] = df['label'].str.extract(r'__label__(\\d+)').astype(int) # Fix the regex to correctly extract the digit\n",
-        "    return df\n",
-        "\n",
-        "train_file = os.path.join(bittlingmayer_amazonreviews_path, 'train.ft.txt.bz2')\n",
-        "test_file = os.path.join(bittlingmayer_amazonreviews_path, 'test.ft.txt.bz2')\n",
-        "\n",
-        "train_df = extractData(train_file)\n",
-        "test_df = extractData(test_file)\n",
+        "train_df = load_data(train_path)\n",
+        "test_df = load_data(test_path)\n",
         "\n",
         "print(\"Train DataFrame head:\")\n",
         "print(train_df.head())\n",
@@ -246,8 +250,8 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "cpNGwj8e8B7F",
-        "outputId": "7eda2480-5dd3-4f98-e25d-74bf7217a2e4"
+        "id": "0PVIBKQW4hbA",
+        "outputId": "25428d1e-410e-40dd-d436-28f19e336548"
       },
       "execution_count": 10,
       "outputs": [
@@ -256,291 +260,20 @@
           "name": "stdout",
           "text": [
             "Train DataFrame head:\n",
-            "   label                                               text\n",
-            "0      2  Stuning even for the non-gamer: This sound tra...\n",
-            "1      2  The best soundtrack ever to anything.: I'm rea...\n",
-            "2      2  Amazing!: This soundtrack is my favorite music...\n",
-            "3      2  Excellent Soundtrack: I truly like this soundt...\n",
-            "4      2  Remember, Pull Your Jaw Off The Floor After He...\n",
+            "                                                text  label\n",
+            "0  Stuning even for the non-gamer: This sound tra...      1\n",
+            "1  The best soundtrack ever to anything.: I'm rea...      1\n",
+            "2  Amazing!: This soundtrack is my favorite music...      1\n",
+            "3  Excellent Soundtrack: I truly like this soundt...      1\n",
+            "4  Remember, Pull Your Jaw Off The Floor After He...      1\n",
             "\n",
             "Test DataFrame head:\n",
-            "   label                                               text\n",
-            "0      2  Great CD: My lovely Pat has one of the GREAT v...\n",
-            "1      2  One of the best game music soundtracks - for a...\n",
-            "2      1  Batteries died within a year ...: I bought thi...\n",
-            "3      2  works fine, but Maha Energy is better: Check o...\n",
-            "4      2  Great for the non-audiophile: Reviewed quite a...\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Data Preliminaries"
-      ],
-      "metadata": {
-        "id": "T1P1LKrXFfWL"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Check the info of the dataframes\n",
-        "train_df.info()"
-      ],
-      "metadata": {
-        "id": "aoexdNOHF-Zi",
-        "outputId": "d2d9d443-cdbc-4af8-abc7-f0008781774c",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "<class 'pandas.core.frame.DataFrame'>\n",
-            "RangeIndex: 3600000 entries, 0 to 3599999\n",
-            "Data columns (total 2 columns):\n",
-            " #   Column  Dtype \n",
-            "---  ------  ----- \n",
-            " 0   label   int64 \n",
-            " 1   text    object\n",
-            "dtypes: int64(1), object(1)\n",
-            "memory usage: 54.9+ MB\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "train_df['label'].value_counts()"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 178
-        },
-        "id": "--A6e7udBn04",
-        "outputId": "d0a6a34c-fe00-4136-d15c-6ca33b01cd9b"
-      },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "label\n",
-              "2    1800000\n",
-              "1    1800000\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>label</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>1800000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>1800000</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 11
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "test_df['label'].value_counts()"
-      ],
-      "metadata": {
-        "id": "34XvK9RgFKgJ",
-        "outputId": "6313c71e-f336-4c21-cb1f-743cc1db4fc2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 178
-        }
-      },
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "label\n",
-              "2    200000\n",
-              "1    200000\n",
-              "Name: count, dtype: int64"
-            ],
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>count</th>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>label</th>\n",
-              "      <th></th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>200000</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>200000</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div><br><label><b>dtype:</b> int64</label>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 12
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Checking for duplicates in the dataframes\n",
-        "train_df.duplicated().sum()"
-      ],
-      "metadata": {
-        "id": "ilbJygktFRRN",
-        "outputId": "00a6fed5-1208-4857-e730-39f04f348f5a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 14,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "np.int64(0)"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 14
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### Named Entity Recognition (NER)"
-      ],
-      "metadata": {
-        "id": "bF-4NKKHG5Yw"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "nlp = spacy.load(\"en_core_web_sm\")\n",
-        "\n",
-        "def extract_entities(text):\n",
-        "  doc = nlp(text)\n",
-        "  entities = {}\n",
-        "  for ent in doc.ents:\n",
-        "    if ent.label_ in [\"PRODUCT\", \"ORG\"]: # ORG often captures brand names\n",
-        "      if ent.label_ not in entities:\n",
-        "        entities[ent.label_] = []\n",
-        "      entities[ent.label_].append(ent.text)\n",
-        "  return entities\n",
-        "\n",
-        "# Apply NER to a sample of the training data\n",
-        "# Processing the entire dataset might be slow, so we'll process a smaller portion.\n",
-        "sample_size = 20000\n",
-        "train_df_sample = train_df.sample(n=sample_size, random_state=42).copy() # Use .copy() to avoid SettingWithCopyWarning\n",
-        "train_df_sample['entities'] = train_df_sample['text'].apply(extract_entities)\n",
-        "\n",
-        "print(\"\\nSample DataFrame with extracted entities:\")\n",
-        "print(train_df_sample.head())"
-      ],
-      "metadata": {
-        "id": "VFX5jNawFZXr",
-        "outputId": "81be4c9c-4790-4d61-8aef-f053dfdfb8ad",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Sample DataFrame with extracted entities:\n",
-            "         label                                               text  \\\n",
-            "2079998      1  Expensive Junk: This product consists of a pie...   \n",
-            "1443106      1  Toast too dark: Even on the lowest setting, th...   \n",
-            "3463669      2  Excellent imagery...dumbed down story: I enjoy...   \n",
-            "2914699      1  Are we pretending everyone is married?: The au...   \n",
-            "1603231      1  Not worth your time: Might as well just use a ...   \n",
-            "\n",
-            "                              entities  \n",
-            "2079998  {'ORG': ['Velcro', 'Amazon']}  \n",
-            "1443106         {'ORG': ['Cuisinart']}  \n",
-            "3463669                             {}  \n",
-            "2914699                             {}  \n",
-            "1603231                             {}  \n"
+            "                                                text  label\n",
+            "0  Great CD: My lovely Pat has one of the GREAT v...      1\n",
+            "1  One of the best game music soundtracks - for a...      1\n",
+            "2  Batteries died within a year ...: I bought thi...      0\n",
+            "3  works fine, but Maha Energy is better: Check o...      1\n",
+            "4  Great for the non-audiophile: Reviewed quite a...      1\n"
           ]
         }
       ]
@@ -549,7 +282,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "OvX2GqD9HhfH"
+        "id": "UlmIbwV_5id9"
       },
       "execution_count": null,
       "outputs": []
